# human-centric-scene-synthesis

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  clean.sh  kill.sh  run.sh
src/cpp/: CMakeLists.txt  Entity.cpp  Entity.h  Evaluator.cpp  Evaluator.h  Furniture.cpp  Furniture.h  Learner.cpp  Learner.h  Room.cpp  Room.h  SUNCGMetadata.cpp  SUNCGMetadata.h  Sampler.cpp  Sampler.h  helper.cpp  helper.h  macros.h  main.cpp
src/cpp/lib/: polygon.cpp  polygon.h
src/cpp/lib/rrt/: BiRRT.hpp  Tree.hpp
src/cpp/lib/rrt/2dplane/: 2dplane.cpp  2dplane.hpp  GridStateSpace.cpp  GridStateSpace.hpp  PlaneStateSpace.hpp
src/cpp/lib/rrt/planning/: Path.hpp
src/layout_classification/: classify.py  requirements.txt
src/metadata/: ModelCategoryMapping.csv  costWeight.json  groups.json  models.csv  opengl_lights.txt  suncgModelLights.json
src/metadata/prior/: furnWallDist.json  furnWallOri.json  furnWallSecondDist.json
src/metadata/prior/affordance/: ATM.xml  accordion.xml  air_conditioner.xml  amplifier.xml  arch.xml  armchair.xml  baby_bed.xml  basketball_hoop.xml  bathtub.xml  beer.xml  bench_chair.xml  bicycle.xml  book.xml  books.xml  bookshelf.xml  bottle.xml  bread.xml  bunker_bed.xml  cake.xml  camera.xml  candle.xml  car.xml  cart.xml  ceiling_fan.xml  cellphone.xml  chair.xml  chair_set.xml  chandelier.xml  chessboard.xml  clock.xml  cloth.xml  coffee_kettle.xml  coffee_machine.xml  coffee_table.xml  coffin.xml  column.xml  computer.xml  container.xml  containers.xml  cooker.xml  (+141 more)
src/python/: config.py  evaluate.py  learn_distribution.py  requirements.txt  visualize_activity.py
